--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     <!-- Add the permissions here -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.STORAGE"/>
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:label="mandir"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
