--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  image_picker: 1.1.0
+  image_picker: 1.1.1
+  path_provider: ^2.1.5
+  widgets_to_image: ^1.0.0
+  permission_handler: ^10.0.0
+  image_gallery_saver_plus: '^3.0.5'
 
 
 dev_dependencies:
@@ -62,6 +66,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/fonts/
     - assets/1.jpg
     - assets/2.jpg
     - assets/3.webp
@@ -80,10 +85,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: RubikWetPaint
+      fonts:
+          - asset: assets/fonts/RubikWetPaint-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
